--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
-        
+        <section class="conteiner principal">
+            <h1> Quer aprender mais? Vem para o reforço+!</h1>
+            <img class="img" src="Screenshot_20230704-112647 (1).png" alt="">
+        </section>
     </body>
 </html>
