--- a/index.html
+++ b/index.html
@@ -1,15 +1,55 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html>
-    <head>
-        <title>Reforço+</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width, nithal-csale=1">
-        <link rel="stylesheet" href="style.css"> 
-    </head>
-    <body>
-        <section class="conteiner principal">
-            <h1> Quer aprender mais? Vem para o reforço+!</h1>
-            <img class="img" src="Screenshot_20230704-112647 (1).png" alt="">
-        </section>
-    </body>
+<head>
+    <title > Reforço+ </title>
+    <meta  charset =" UTF-8 " >
+    <meta  name =" viewport " content ="width-device-width, initial-scale=1">
+    <link  rel ="stylesheet" href ="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital@1&display=swap" rel="stylesheet">
+
+</head>
+<body>
+    <section class="principal container">
+        <div class="container-caixa">
+            <h1 class="container-titulo">Com o reforço+ esta disponibilizando aulas onlines e flexiveis por um preço único</h1>
+            <img src="img/Ana Vanda + Ana A (1).png" alt="O combo+ é a junção do Ana Vanda+ e o AVB língua" class="container-imagem">
+            <a href="https://descomplica.com.br/;" class="container-botao">Assine por 12x de R$ 24,90*</a>
+            <a href="https://descomplica.com.br/;" class="container-botao botao-secundario">Assinar somente o Reforço+</a>
+            <p class="container-aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
+
+    <section class="container secundario">
+        <img src="depositphotos_40595699-stock-photo-notebook-mobile-phone-tablet-pc.jpg" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
+                aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <div class="container-descricao">
+            <p class="descricao-texto">
+                Só o Reforço+ oferece aula online e cursos de diversas áreas da
+                tecnologia e aprender toda as matérias e linguas que deseja, onde e como quiser.
+            </p>
+            <a href="https://descomplica.com.br/;" class="container-botao secundario-botao" container>Assine o Reforço+</a>
+        </div>
+        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario-imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+            class="secundario-imagem">
+        <div class="container-descricao">
+            <h2 class="descricao-titulo">Baixe seus cursos</h2>
+            <p class="descricao-texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
+        </div>
+    </section>
+
+</body>
+
 </html>
