--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <section class="principal container">
         <div class="container-caixa">
             <h1 class="container-titulo">Com o reforço+ esta disponibilizando aulas onlines e flexiveis por um preço único</h1>
-            <img src="img/Ana Vanda + Ana A (1).png" alt="O combo+ é a junção do Ana Vanda+ e o AVB língua" class="container-imagem">
-            <a href="https://descomplica.com.br/;" class="container-botao">Assine por 12x de R$ 24,90*</a>
+            <img src="Screenshot_20230704-112647 (1) (1).png" alt="O combo+ é a junção do Ana Vanda+ e o AVB língua" class="container-imagem">
+            <a href="https://descomplica.com.br/;" class="container-botao">Assine por 12x de R$24,90*</a>
             <a href="https://descomplica.com.br/;" class="container-botao botao-secundario">Assinar somente o Reforço+</a>
             <p class="container-aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
 
     <section class="container secundario">
-        <img src="depositphotos_40595699-stock-photo-notebook-mobile-phone-tablet-pc.jpg" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <img src="depositphotos_40595699-stock-photo-notebook-mobile-phone-tablet-pc.jpg" alt="Um monitor e um celular com a alura plus aberta" class="sala-imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
+            <h2 class="descricao-titulo">Assista do seu jeito</h2>
+            <p class="descricao-texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
                 aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
@@ -37,11 +37,11 @@
             </p>
             <a href="https://descomplica.com.br/;" class="container-botao secundario-botao" container>Assine o Reforço+</a>
         </div>
-        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario-imagem">
+        <img src="sala-1.jpg" alt="Tela do alura+ e alura língua" class="secundario-imagem">
     </section>
 
     <section class="container secundario">
-        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        <img src="Captura de tela_2023-08-01_12-08-47.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario-imagem">
         <div class="container-descricao">
             <h2 class="descricao-titulo">Baixe seus cursos</h2>
